kubernetes/apps/prod/xen/namespace.yaml
---
# create a namespace for homepage
apiVersion: v1
kind: Namespace
metadata:
  name: xen
