kubernetes/apps/prod/xen/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: xen
  namespace: xen
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://xen.${DOMAIN}"
    gethomepage.dev/description: Xen Orchestra
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: xen-orchestra.png
    # gethomepage.dev/app: xen  # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: "Xen Orchestra"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`xen.${DOMAIN}`)
      kind: Rule
      priority: 1
      services:
        - name: xen
          port: 81
  tls:
    secretName: xen.${DOMAIN}
